# KeyWave

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
scripts/: format.ps1  format.sh  run-clang-tidy.ps1  run-clang-tidy.sh
src/: CMakeLists.txt  main.cpp
src/app/: AppConfig.cpp  AppConfig.hpp  AppSettings.cpp  AppSettings.hpp  AppSettingsConstraints.cpp  AppSettingsConstraints.hpp  AppSettingsSerializer.cpp  AppSettingsSerializer.hpp  Application.cpp  Application.hpp  AssetPaths.cpp  AssetPaths.hpp  MidiLibraryStore.cpp  MidiLibraryStore.hpp  PlaybackTransportAction.cpp  PlaybackTransportAction.hpp  PlaybackTransportControls.cpp  PlaybackTransportControls.hpp  SettingsStorage.cpp  SettingsStorage.hpp  StartupDataLoader.cpp  StartupDataLoader.hpp  StartupSceneBuilder.cpp  StartupSceneBuilder.hpp  VisualizationSettingsAdapters.cpp  VisualizationSettingsAdapters.hpp  VisualizationSettingsPanelControls.cpp  VisualizationSettingsPanelControls.hpp  VisualizerController.cpp  VisualizerController.hpp
src/app/midi_library/: FileOps.cpp  FileOps.hpp  Hash.cpp  Hash.hpp  Ids.cpp  Ids.hpp  Metadata.cpp  Metadata.hpp
src/audio/: FluidSynthPianoSynth.cpp  FluidSynthPianoSynth.hpp  NullPianoSynth.cpp  NullPianoSynth.hpp  PianoSynth.hpp  TimelineAudioScheduler.cpp  TimelineAudioScheduler.hpp
src/core/: CoreTypes.hpp
src/diagnostics/: Diagnostics.cpp  Diagnostics.hpp
src/fallingnotes/: FallingNotesLayout.cpp  FallingNotesLayout.hpp  FallingNotesRenderAdapter.cpp  FallingNotesRenderAdapter.hpp  FallingNotesSceneBuilder.cpp  FallingNotesSceneBuilder.hpp  FallingNotesTypes.hpp  PianoRollSceneBuilder.cpp  PianoRollSceneBuilder.hpp
src/input/: Key.hpp
src/keyboard/: KeyboardGeometry.cpp  KeyboardGeometry.hpp  KeyboardLayout.cpp  KeyboardLayout.hpp  KeyboardRenderAdapter.cpp  KeyboardRenderAdapter.hpp  KeyboardState.cpp  KeyboardState.hpp  KeyboardTypes.hpp
src/midi/: MidiFileLoader.cpp  MidiFileLoader.hpp  MidiTimeline.cpp  MidiTimeline.hpp  MidiTimelineQuery.cpp  MidiTimelineQuery.hpp  MidiTrack.cpp  MidiTrack.hpp  MidiTypes.hpp
src/pianoroll/: PianoRollLayout.cpp  PianoRollLayout.hpp  PianoRollRenderAdapter.cpp  PianoRollRenderAdapter.hpp  PianoRollTypes.hpp
src/platform/: MidiFileDialog.cpp  MidiFileDialog.hpp  Window.cpp  Window.hpp
src/playback/: PlaybackTransport.cpp  PlaybackTransport.hpp
src/render/: RenderCommand.hpp  RenderScene.hpp  RenderTypes.hpp  RendererBackend.hpp  RendererView.cpp  RendererView.hpp
src/render_opengl/: OpenGLRectRenderer.cpp  OpenGLRectRenderer.hpp  OpenGLRendererBackend.cpp  OpenGLRendererBackend.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLStyledRectRenderer.cpp  OpenGLStyledRectRenderer.hpp
src/render_opengl/shaders/: rect.frag.glsl  rect.vert.glsl  styled_rect.frag.glsl  styled_rect.vert.glsl
src/ui/: ImGuiLayer.cpp  ImGuiLayer.hpp  TransportControls.cpp  TransportControls.hpp  TransportControlsConfig.cpp  TransportControlsConfig.hpp  TransportTime.cpp  TransportTime.hpp  VisualizationSettingsPanel.cpp  VisualizationSettingsPanel.hpp
tests/: CMakeLists.txt  MidiFileLoaderTests.cpp
tests/app/: AppConfigTests.cpp  AppSettingsSerializerTests.cpp  AppSettingsTests.cpp  MidiLibraryStoreTests.cpp  PlaybackTransportControlsTests.cpp  SettingsStorageTests.cpp  StartupDataLoaderTests.cpp  VisualizationSettingsAdaptersTests.cpp  VisualizationSettingsPanelControlsTests.cpp  VisualizerControllerTests.cpp
tests/architecture/: LayeringTests.cpp  SpanApiTests.cpp
tests/audio/: FluidSynthPianoSynthTests.cpp  NullPianoSynthTests.cpp  TimelineAudioSchedulerTests.cpp
tests/diagnostics/: RecordingDiagnosticSink.hpp
tests/fallingnotes/: FallingNotesLayoutTests.cpp  FallingNotesRenderAdapterTests.cpp  FallingNotesSceneBuilderTests.cpp  PianoRollSceneBuilderTests.cpp
tests/keyboard/: KeyboardGeometryTests.cpp  KeyboardLayoutTests.cpp  KeyboardRenderAdapterTests.cpp  KeyboardStateTests.cpp
tests/midi/: MidiFileLoaderTests.cpp  MidiFixtures.cpp  MidiFixtures.hpp  MidiTimelineQueryTests.cpp
tests/pianoroll/: PianoRollLayoutTests.cpp  PianoRollRenderAdapterTests.cpp
tests/platform/: WindowStateTests.cpp
tests/playback/: PlaybackTransportTests.cpp
tests/render/: RendererViewTests.cpp
tests/ui/: TransportControlsConfigTests.cpp  TransportTimeTests.cpp
